# prover-contracts

./: .coderabit.yml  .gitignore  .gitmodules  .npmignore  .solhintignore  Makefile  a.sh  bun.lockb  foundry.toml  go.mod  package-lock.json  package.json  queryp.sh  remappings.txt
.github/: README.md
.github/workflows/: bindings.yml  foundry.yml  release.yml
contracts/base/: AppStateVerifier.sol
contracts/core/: CrossL2Prover.sol  CrossL2ProverV2.sol  SequencerSignatureVerifier.sol  SequencerSignatureVerifierV2.sol
contracts/examples/: TestContract.sol  Venus.sol
contracts/interfaces/: IAppStateVerifier.sol  IClientUpdates.sol  ICrossL2Prover.sol  (+7 more)
script/: ComputeCreate2Addresses.s.sol  ComputeOPStackCannonProverCreate2Address.s.sol  DeployNativeProver.s.sol  DeployNativeProverCreate2.s.sol  DeployOPStackBedrockProver.s.sol  DeployOPStackBedrockProverCreate2.s.sol  DeployOPStackCannonProver.s.sol  DeployOPStackCannonProverCreate2.s.sol  DeployOpProver.s.sol  DeployRegistry.s.sol  DeployRegistryCreate2.s.sol  DeployTestContract.s.sol  DeployTestContractCreate2.s.sol
solana/prover/: Cargo.toml  rustfmt.toml
solana/prover/program/: Cargo.toml
solana/prover/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
solana/prover/program/tests/: processor.rs  setup.rs  validate_event.rs
specs/: update.spec.yaml
src/: deploy.ts  tx.ts  updateContract.ts
test/: CrossL2Prover.t.sol  CrossL2ProverClientUpdate.t.sol  CrossL2ProverRLP.t.sol  CrossL2ProverV2.t.sol  Repro.t.sol
tronbox/: tronbox-config.js  tronbox-evm-config.js  tronbox.js
(+92 files in other folders)
